--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -240,7 +240,7 @@ function showDivs(n) {
 
 <br><br><hr><br>
 <footer>
-<div class="define"  >Copyright&copy; 2020 - Página creada por Javier Fernández, Oscar Jiménez y Edison López - Todos los derechos reservados</div>
+<div class="define"  >Copyright&copy; 2020 - Página creada por Oscar Jiménez, David Morales y Guevara Andres - Todos los derechos reservados</div>
 </footer>
 
 
